force-app/main/default/objects/vlocity_ps__BenefitCaseServicePlan__c/vlocity_ps__BenefitCaseServicePlan__c.object-meta.xml
<CustomObject>
    <description>The agreed upon actions, products and services that the government organization will provide to the client</description>
    <label>Service Plan</label>
    <nameField>
        <label>Service Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>