force-app/main/default/objects/vlocity_ps__BenefitCaseServicePlan__c/fields/Case_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Review_Date__c</fullName>
    <formula>vlocity_ps__StartDate__c + 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Review Date</label>
    <type>Date</type>
</CustomField>