force-app/main/default/objects/vlocity_ps__BenefitCaseServicePlan__c/fields/Needs_Statement_c__c.field-meta.xml
<CustomField>
    <fullName>Needs_Statement_c__c</fullName>
    <label>Needs_Statement__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>