force-app/main/default/objects/vlocity_ps__BenefitCaseServicePlan__c/fields/vlocity_ps__BcasePrimaryContactId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__BcasePrimaryContactId__c</fullName>
    <formula>vlocity_ps__CaseNumber__r.vlocity_ps__PrimaryContactId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BcasePrimaryContactId</label>
    <type>Text</type>
</CustomField>