force-app/main/default/objects/vlocity_ps__BenefitCaseServicePlan__c/fields/vlocity_ps__BcaseProgramId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__BcaseProgramId__c</fullName>
    <formula>vlocity_ps__CaseNumber__r.vlocity_ps__ProgramId__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BcaseProgramId</label>
    <type>Text</type>
</CustomField>