force-app/main/default/objects/vlocity_ps__BenefitCaseServicePlan__c/fields/vlocity_ps__CaseNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__CaseNumber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benefit Case</label>
    <referenceTo>vlocity_ps__Case__c</referenceTo>
    <relationshipLabel>Service Plans</relationshipLabel>
    <relationshipName>ServicePlans</relationshipName>
    <type>Lookup</type>
</CustomField>