force-app/main/default/objects/vlocity_ps__BenefitCaseServicePlan__c/fields/vlocity_ps__Contact__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Plans</relationshipLabel>
    <relationshipName>Service_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>