force-app/main/default/objects/vlocity_ps__BenefitCaseServicePlan__c/fields/vlocity_ps__Gender__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Gender__c</fullName>
    <label>Primary Client Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>