force-app/main/default/objects/vlocity_ps__BenefitCaseServicePlan__c/fields/vlocity_ps__PrimaryClient__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PrimaryClient__c</fullName>
    <formula>vlocity_ps__Contact__r.vlocity_ps__PartyId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Client</label>
    <type>Text</type>
</CustomField>