force-app/main/default/objects/vlocity_ps__BenefitCaseServicePlan__c/fields/vlocity_ps__PrimaryClientLocation__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PrimaryClientLocation__c</fullName>
    <formula>vlocity_ps__Contact__r.vlocity_ps__Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Client Region</label>
    <type>Text</type>
</CustomField>