force-app/main/default/objects/vlocity_ps__BenefitCaseServicePlan__c/fields/vlocity_ps__ProductPrice__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ProductPrice__c</fullName>
    <label>Product Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>