force-app/main/default/objects/vlocity_ps__BenefitCaseServicePlan__c/fields/vlocity_ps__Progress__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Progress__c</fullName>
    <label>Progress</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>