force-app/main/default/objects/vlocity_ps__BenefitCaseServicePlan__c/fields/vlocity_ps__ProgressBar__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ProgressBar__c</fullName>
    <formula>IMAGE(&apos;/resource/1409769925000/vlocity_ps__BlueProgressBar&apos;, &apos;Test&apos;, 10, ( vlocity_ps__Progress__c)) &amp;
IMAGE(&apos;/resource/1409769975000/vlocity_ps__ProgressBorder&apos;, &apos;Test&apos;, 10, (100 - vlocity_ps__Progress__c )) &amp;
&apos; &apos; &amp;
TEXT (vlocity_ps__Progress__c) &amp;
&apos;%&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progress Bar</label>
    <type>Text</type>
</CustomField>