force-app/main/default/objects/vlocity_ps__BenefitCaseServicePlan__c/fields/vlocity_ps__ServiceProviderName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ServiceProviderName__c</fullName>
    <formula>vlocity_ps__ServiceProviderId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Provider Name</label>
    <type>Text</type>
</CustomField>