force-app/main/default/objects/vlocity_ps__BenefitCaseServicePlan__c/fields/vlocity_ps__TargetEndDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__TargetEndDate__c</fullName>
    <label>Target End Date</label>
    <type>Date</type>
</CustomField>